// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainFieldsDisplay with empty domain design 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    />
  </div>
  <div
    className="panel-body"
  >
    <p />
    <div
      className="table-responsive"
    >
      <div
        className="grid-messages"
      />
      <table
        className="table table-striped table-bordered"
      >
        <thead>
          <tr>
            <th
              className="grid-header-cell"
              draggable={false}
              id="name"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Name
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="label"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Label
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="rangeURI"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Range URI
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="conceptURI"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Concept URI
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="required"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Required
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="scale"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Scale
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="grid-empty"
          >
            <td
              colSpan={6}
            >
              No data available.
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DomainFieldsDisplay with title 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      test domain title
    </div>
  </div>
  <div
    className="panel-body"
  >
    <p />
    <div
      className="table-responsive"
    >
      <div
        className="grid-messages"
      />
      <table
        className="table table-striped table-bordered"
      >
        <thead>
          <tr>
            <th
              className="grid-header-cell"
              draggable={false}
              id="name"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Name
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="label"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Label
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="rangeURI"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Range URI
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="conceptURI"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Concept URI
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="required"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Required
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="scale"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Scale
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="grid-empty"
          >
            <td
              colSpan={6}
            >
              No data available.
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DomainFieldsDisplay without title 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      test domain name
    </div>
  </div>
  <div
    className="panel-body"
  >
    <p />
    <div
      className="table-responsive"
    >
      <div
        className="grid-messages"
      />
      <table
        className="table table-striped table-bordered"
      >
        <thead>
          <tr>
            <th
              className="grid-header-cell"
              draggable={false}
              id="name"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Name
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="label"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Label
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="rangeURI"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Range URI
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="conceptURI"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Concept URI
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="required"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Required
            </th>
            <th
              className="grid-header-cell"
              draggable={false}
              id="scale"
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={
                {
                  "minWidth": undefined,
                }
              }
            >
              Scale
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="grid-empty"
          >
            <td
              colSpan={6}
            >
              No data available.
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
